fix navbar on mobile

--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -76,11 +76,20 @@
   left: 0;
   right: 0;
   z-index: 20;
-  padding: 0 5px;
-  border-top: 1px solid #ccc;
+  padding: 5px;
 }
 #nav_2 .active {
-  color: #000000;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  color: #374bff;
+  transform: translateY(-20px);
+  width: 50px;
+  height: 50px;
+  background-color: #ffffff;
+  border-radius: 100%;
+  transition: all .5s ease;
 }
 @media (width <= 1000px) {
   .header {
@@ -112,7 +121,10 @@
     display: none;
   }
   #nav_2 {
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
   }
 }
 
